src/test/deca/context/invalid/created/decl_class/double_classe.deca
// Description :
//    super classe non déclarée
// Resultats :
//		Erreur contextuelle
//    	Ligne 9 :(1.3) Identificateur <superclasse> non déclaré

class A{
}
class A{
}